<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_video_picker"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/selectorGridLayout"
        android:foregroundGravity="bottom"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/selectorTop"
        >
        <TextView
            android:id="@+id/picker_home_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:text="@string/selector_home"
            android:textColor="@color/selectorButton" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/selector_title"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/selector_next"
            android:textColor="@color/selectorButton" />
    </RelativeLayout>

</FrameLayout>