<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/backgroundWhite"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundWhite"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/backgroundWhiteGrey">

            <TextView
                android:id="@+id/library_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/library_video_title_text"
                android:textColor="@color/textBlack"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/library_video_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@id/library_video_title"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:text="@string/library_video_home_text"
                android:textColor="@color/buttonBlueAccent"/>

            <TextView
                android:id="@+id/library_video_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/library_video_title"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:text="@string/library_video_next_text"
                android:textColor="@color/buttonBlueAccent"/>
        </RelativeLayout>

        <!-- Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/lineDarkGrey"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/library_video_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/backgroundWhite"
            android:foregroundGravity="bottom"/>
    </LinearLayout>

</FrameLayout>